[gd_scene load_steps=3 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="HUD" type="CanvasLayer" index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="Gamepad" type="Node2D" parent="." index="0"]

[node name="Left" type="TouchScreenButton" parent="Gamepad" index="0"]

modulate = Color( 1, 0, 0, 1 )
position = Vector2( 64, 352 )
rotation = -1.5708
normal = ExtResource( 2 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Material", "Pause", "Transform", "Visibility" ]

[node name="Right" type="TouchScreenButton" parent="Gamepad" index="1"]

modulate = Color( 1, 0, 0, 1 )
position = Vector2( 224, 288 )
rotation = 1.5708
normal = ExtResource( 2 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Up" type="TouchScreenButton" parent="Gamepad" index="2"]

modulate = Color( 1, 0, 0, 1 )
position = Vector2( 512, 288 )
normal = ExtResource( 2 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Visibility" ]

[connection signal="pressed" from="Gamepad/Left" to="." method="_on_Left_pressed"]

[connection signal="released" from="Gamepad/Left" to="." method="_on_Left_released"]

[connection signal="pressed" from="Gamepad/Right" to="." method="_on_Right_pressed"]

[connection signal="released" from="Gamepad/Right" to="." method="_on_Right_released"]

[connection signal="pressed" from="Gamepad/Up" to="." method="_on_Up_pressed"]

[connection signal="released" from="Gamepad/Up" to="." method="_on_Up_released"]


